Fix white overlay menu bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,7 @@ strong {
 
 @media screen and (max-width: 899px) {
   .site-nav {
+    background-color: transparent !important;
     position:absolute;
     top:0;
     right:0;
